production db config
git-svn-id: svn+ssh://8.17.86.51/users/home/peeoutside/svn/repo@6 f439cc64-dcae-62a1-c29a-ba80cfb482d8

--- a/config/database.yml
+++ b/config/database.yml
@@ -30,9 +30,9 @@ test:
 
 # mysql.gluedtomyseat.com
 production:
-  host: mysql.peeoutside.org
+  host: 8.17.86.51
   adapter: mysql
   database: pee_production
-  username: peedb
-  password: h&nn0n
+  username: peeoutside
+  password: p330uts1d3
   socket: /tmp/mysql.sock
