production db config
git-svn-id: svn+ssh://8.17.86.51/users/home/peeoutside/svn/repo@7 f439cc64-dcae-62a1-c29a-ba80cfb482d8

--- a/config/database.yml
+++ b/config/database.yml
@@ -34,5 +34,5 @@ production:
   adapter: mysql
   database: pee_production
   username: peeoutside
-  password: p330uts1d3
+  password: qu1KupT1JingX1Y
   socket: /tmp/mysql.sock
