production db config
git-svn-id: svn+ssh://8.17.86.51/users/home/peeoutside/svn/repo@8 f439cc64-dcae-62a1-c29a-ba80cfb482d8

--- a/config/database.yml
+++ b/config/database.yml
@@ -30,7 +30,7 @@ test:
 
 # mysql.gluedtomyseat.com
 production:
-  host: 8.17.86.51
+  host: localhost
   adapter: mysql
   database: pee_production
   username: peeoutside
