production db config
git-svn-id: svn+ssh://8.17.86.51/users/home/peeoutside/svn/repo@10 f439cc64-dcae-62a1-c29a-ba80cfb482d8

--- a/config/database.yml
+++ b/config/database.yml
@@ -35,4 +35,4 @@ production:
   database: pee_production
   username: peeoutside
   password: qu1KupT1JingX1Y
-  socket: /tmp/mysql.sock=
+  socket: /tmp/mysql.sock
