production db config
git-svn-id: svn+ssh://8.17.86.51/users/home/peeoutside/svn/repo@11 f439cc64-dcae-62a1-c29a-ba80cfb482d8

--- a/config/database.yml
+++ b/config/database.yml
@@ -32,7 +32,7 @@ test:
 production:
   host: localhost
   adapter: mysql
-  database: pee_production
+  database: peeoutside_production
   username: peeoutside
   password: qu1KupT1JingX1Y
   socket: /tmp/mysql.sock
